Fixed styling for learning page background
Fixed styling for learning page background as there was whitespace where the background was not covering because the background would only repeat on x

--- a/static/style/learnpage.css
+++ b/static/style/learnpage.css
@@ -1,8 +1,7 @@
 body {
     background-image: url("/static/learningpage_1.jpeg");
-    background-repeat: repeat-x;
+    background-repeat: repeat;
     background-size: auto;
-    background-position: top;
 }
 
 .homepage {
